--- a/newtab.html
+++ b/newtab.html
@@ -1,11 +1,11 @@
-<title>New tab</title>
+<title>Prime</title>
 <style>
 html {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
 }
 @media (prefers-color-scheme: dark) {
   html {
-    background-color: rgb(50, 54, 57);
+    background-color: rgb(0, 0, 0);
   }
 }
 </style>
